Answered the "short history" question.

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -17,7 +17,7 @@ Here are just a few questions so I can get to know you and so you can get practi
 Where did you attend High School, and did you graduate? Compare english class to math, is one easier for you than the other? Finally which subject did you do the best in? Your answer should have at least two sentences devoted to each question.  
   
 ### my answer     
-  
+I attended high school at William J. Pete Knight High School, in Palmdale, CA.  I graduated just a year ago, with honors, and as a member of the California Scholarship Federation.  I find topics in English class to come easier, but I have enjoyed Math classes far more as a student.  As a math student, I have studied Statistics and Calculus in great depth, and find them to be enjoyable topics.  I did the best in AP Calculus AB.  My group and I had the highest scores of any group in our class, and we all finished with an "A".
 
      
 
