Answered "computer" question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -26,7 +26,7 @@ I attended high school at William J. Pete Knight High School, in Palmdale, CA.  
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
 ### my answer   
-  
+I have a computer that runs on the Windows operating system, and is powered by AMD and HP parts.  I would rate myself about a 7 on the computer knowledge scale, as I previously wanted to be a software engineer.  My internet access is quite good at home, and I tend not to have any connection issues.  
    
 
 ## Others and You?   
