Answered "Others and You?" question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -33,7 +33,7 @@ I have a computer that runs on the Windows operating system, and is powered by A
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
 ### my answer     
-  
+I prefer to be called by my normal name, "Rabi".  Some people tend to call me "Robs", and I don't mind that, either.  
    
  
 
