Answered the "Aspirations" question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -44,7 +44,7 @@ I prefer to be called by my normal name, "Rabi".  Some people tend to call me "R
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
 ### my answer     
-  
+I would like to work in the bio medical field for a career.  This has been an aspiration of mine for as long as I can remember.  Biology and chemistry are the subjects in college that I tend towards most.  Currently,  I am working towards an Associate's Degree in Biology, which I hope to further into a Bachelor's Degree at a four-year institution.  Later, I would like to enter either Graduate or Medical school, in order to further my career goals.
    
  
 
