Answered the "Past adventures?" question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -55,7 +55,7 @@ I would like to work in the bio medical field for a career.  This has been an as
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
-  
+I have been to the Middle Eastern nation of Lebanon on many occasions, but I've always wanted to travel to nations in Europe and Asia, like France, Italy, and South Korea.  I have never been in the military, but, were I to be drafted, I would probably choose the Marines, as they stand out as the most formidable force in America's military.  I'd likely work as a technician or scientist within the Corps, if possible.
    
   
 
