Answered the "Why are you taking Statistics?" question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -68,7 +68,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
-  
+I have not taken a Statistics class at AVC, but I did enroll in and pass AP Statistics at my high school, when I was a senior.  I wasn't aware of the benefits of taking Math 116 over Math 115, but I'm thrilled that I'm in the more transfer-friendly class.  I would need an "A" in this class to satisfy my plans in the future, which include transferring to UCLA, and then continuing on with my post-graduate studies. 
    
  
 
